#WIP-76 | nearest property also need for developer/agent
