# src/user/models/auth/profile.py
@@ -8,6 +8,9 @@ from .user import User
 class Profile(TimestampedModel):
     user = models.OneToOneField(User, on_delete=models.CASCADE)
     phone_number = PhoneNumberField(null=True)
+    address = models.CharField(max_length=500, null=True)
+    latitude = models.FloatField(null=True)
+    longitude = models.FloatField(null=True)
 
     class Meta:
         abstract = True
@@ -16,24 +19,24 @@ class Profile(TimestampedModel):
         return str(self.user)
 
 
-class DeveloperProfile(Profile):
-    company_logo = models.ImageField(max_length=1000, null=True, upload_to="developer_profile_company_logo/")
+class DeveloperOrAgentMixin(Profile):
+    company_logo = models.ImageField(max_length=1000, null=True, upload_to="developer_or_agent_company_logo/")
     company_name = models.CharField(max_length=100, null=True)
-    company_address = models.CharField(max_length=500, null=True)
     company_details = models.CharField(max_length=2000, null=True)
 
+    class Meta:
+        abstract = True
 
-class AgentProfile(Profile):
-    company_logo = models.ImageField(max_length=1000, null=True, upload_to="agent_profile_company_logo/")
-    company_name = models.CharField(max_length=100, null=True)
-    company_address = models.CharField(max_length=500, null=True)
-    company_details = models.CharField(max_length=2000, null=True)
+
+class DeveloperProfile(DeveloperOrAgentMixin):
+    pass
+
+
+class AgentProfile(DeveloperOrAgentMixin):
+    pass
 
 
 class ProspectProfile(Profile):
     first_name = models.CharField(max_length=100)
     last_name = models.CharField(max_length=100)
     gender = models.CharField(max_length=50, choices=GENDER, null=True)
-    address = models.CharField(max_length=2000, null=True)
-    latitude = models.FloatField(null=True)
-    longitude = models.FloatField(null=True)
